--- a/views/subcategory.html
+++ b/views/subcategory.html
@@ -8,7 +8,8 @@
    
     <div class="row" style="height:10px;">
     </div>
-    <div class="" ng-repeat="cat in subcat">
+    <div class="">
+    <div class="sub-hover" ng-repeat="cat in subcat ">
         <div class=" subcat">
         <a ng-click="waytoin(cat.id)" >
            
@@ -19,7 +20,7 @@
         </a>
         </div>
     </div>
-
+</div>
     <div class="row" style="height:10px;">
     </div>
 </div>
