--- a/views/category.html
+++ b/views/category.html
@@ -6,6 +6,7 @@
                 </div>
 			<div class="row">
 				<div class="col-sm-3">
+				<div class="cat-aside">
 					<div class="left-sidebar">
 						<div class="panel-group category-products" style="padding-left: 17px;" id="accordian"><!--category-productsr-->
                             <h4>{{filters[0].name}}</h4>
@@ -30,6 +31,7 @@
 					
 						
 					</div>
+					</div>
 				</div>
 				<div class="col-sm-9">
 					<div class="blog-post-area">
@@ -46,6 +48,7 @@
 						            <li><i class="fa fa-calendar"></i> DEC 5, 2013</li>
 						        </ul>
 						    </div> -->
+						    <div class="category">
 					<div class="media commnets" ng-repeat="list in listings">
 						<a class="pull-left" ng-click="linkclick(list.listing)">
 							<img class="media-object mediumimage" src="{{list.logo|imagepath}}" alt="">
@@ -55,19 +58,23 @@
                             <p><i class="fa fa-map-marker"></i>&nbsp;{{list.address}}</p>
                             <p><i class="fa fa-phone"></i>&nbsp;{{list.contactno}}</p>
 							<div class="social-icons pull-laft">
-							
+							<div class="cat-btn">
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
                                 <a class="btn btn-primary mrr" ng-click="sendemail(list.listing)">Send Email</a>
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
-                            </p>	
+                            </p>
+                            </div>
+                            <div class="cate-social">	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
 <span class='st_twitter_hcount' displayText='Tweet'></span>
 <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
 <span class='st_googleplus_hcount' displayText='Google +'></span>
+                    </div>
 						</div>	
 						</div>
 					</div><!--Comments-->
+					</div>
 				</div>	
 			</div>
 		</div>
