--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -2191,3 +2191,9 @@ color: #fff;
 border-bottom: 0px solid #026177;
 box-shadow: 3px 3px 5px 1px #aaa;
 }
+div[data-node-children] li {
+position: relative;
+/* padding: 11px 0px 0px 0px; */
+line-height: 20px;
+padding-left: 22px;
+}
