--- a/views/innerheader.html
+++ b/views/innerheader.html
@@ -9,6 +9,11 @@
 								<form action="#" class="searchform">
                                 <input type="text" ng-model="search" ng-change="searchlist(search,form.cityy,form.area)" placeholder="Search..." style="width:500px;"/>
                                 <button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right"></i></button>
+                                
+                <div id="divsearch" class="searchdrop">
+                    <p ng-click="totextbox(sea.search,sea.listing)">demo</p>
+                    <p ng-click="totextbox(sea.search,sea.listing)">testing</p>
+                </div>
                             </form>
 						</div>
 					</div>
