--- a/views/slider.html
+++ b/views/slider.html
@@ -97,8 +97,14 @@
                 {{categoryid}}
                 <button type="submit" id="sea" class="btn btn-default search"><i class="fa fa-arrow-circle-o-right" ng-click="innershearch()"></i>
                 </button>
+<!--
                 <div id="divsearch" class="searchdrop" ng-show="searchshow">
                     <p ng-repeat="sea in searchdrop" ng-click="totextbox(sea.search,sea.listing)">{{sea.search}}</p>
+                </div>
+-->
+                <div id="divsearch" class="searchdrop">
+                    <p ng-click="totextbox(sea.search,sea.listing)">demo</p>
+                    <p ng-click="totextbox(sea.search,sea.listing)">testing</p>
                 </div>
             </form>
         </div>
