--- a/views/slider.html
+++ b/views/slider.html
@@ -102,9 +102,8 @@
                     <p ng-repeat="sea in searchdrop" ng-click="totextbox(sea.search,sea.listing)">{{sea.search}}</p>
                 </div>
 -->
-                <div id="divsearch" class="searchdrop">
-                    <p ng-click="totextbox(sea.search,sea.listing)">demo</p>
-                    <p ng-click="totextbox(sea.search,sea.listing)">testing</p>
+                <div id="divsearch" class="searchdrop" ng-show="searchshow">
+                    <p ng-repeat="sea in searchdrop" ng-click="totextbox(sea.search,sea.listing)">{{sea.search}}</p>
                 </div>
             </form>
         </div>
