--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,7 @@
 <section id="login"><!--form-->
 		<div class="container">
 			<div class="row">
+			<div class="login-text">
 				<div class="col-sm-4 col-sm-offset-1">
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
@@ -30,6 +31,7 @@
 							<input type="password" ng-model="signup.password" class="form-control" placeholder="Password"/>
 							<button class="btn btn-default form-control" ng-click="signupuser(signup)">Signup</button>
 					</div><!--/sign up form-->
+				</div>
 				</div>
 			</div>
 		</div>
