--- a/views/detail.html
+++ b/views/detail.html
@@ -43,24 +43,11 @@
 							        <li><a href=""><i class="fa fa-google-plus"></i></a></li>
 							    </ul>
 							</div> -->
-<<<<<<< HEAD
-                   <div class="col-md-5">
-                   
-                    <div class="pull-right">
-                    <map id="map_canvas" glat="19.072408199999998" glang="72.9000167" class="col-md-10"></map>
-<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3770.8012985523833!2d72.900164!3d19.072472!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6277363c179%3A0x36691e6c95a165c3!2sWohlig+Technologies+LLP!5e0!3m2!1sen!2sin!4v1418620638368" width="400" height="180" frameborder="0" style="border:0"></iframe><br>-->
-                       <div class="social-btn">
-                        <span class='st_facebook_hcount' displayText='Facebook' ></span>
-                        <span class='st_twitter_hcount' displayText='Tweet'></span>
-                        <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-                        <span class='st_googleplus_hcount stMainServices' displayText='Google +'></span>
-</div>
-                       </div>
-=======
-                    <div class="col-md-5">
+
+                <div class="col-md-5">
 
                         <div class="pull-right">
-                           
+                           <map id="map_canvas" class="map_canvas"glat="19.072408199999998" glang="72.9000167" width="300" height="250"></map>
                             <br>
                             <div class="social-btn">
                                 <span class='st_facebook_hcount' displayText='Facebook'></span>
@@ -69,7 +56,7 @@
                                 <span class='st_googleplus_hcount stMainServices' displayText='Google +'></span>
                             </div>
                         </div>
->>>>>>> origin/master
+
                         <!--
 							<ul class="nav navbar-nav">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
