--- a/views/detail.html
+++ b/views/detail.html
@@ -128,16 +128,16 @@
                             <table class="table">
                                
                                 <tr>
-                                    <td><img src="../lib/images/home/product1.jpg"></td>
-                                    <td>Visitor Name</td>
+                                    <td><img src="lib/images/home/logo2.png"></td>
+                                    <td>Restaurants</td>
                                 </tr>
                                 <tr>
-                                    <td><img src="../lib/images/home/product1.jpg"></td>
-                                    <td>Visitor Name</td>
+                                    <td><img src="lib/images/home/logo2.png"></td>
+                                    <td>ATM's</td>
                                 </tr>
                                  <tr>
-                                    <td><img src="../lib/images/home/product1.jpg"></td>
-                                    <td>Visitor Name</td>
+                                    <td><img src="lib/images/home/logo2.png"></td>
+                                    <td>Automobiles</td>
                                 </tr>
                             </table>
                         </div>
