--- a/views/detail.html
+++ b/views/detail.html
@@ -89,7 +89,7 @@
 
                         <h2 class="title text-center">Hours Of Operation</h2>
                         <div class="fapd">
-                            <i class="fa fa-calendar"></i>  <strong class="fapadl" ng-repeat="operation in detail.daysofoperation">{{operation.daysofoperationname}}&nbsp;&nbsp;</strong>
+                            <i class="fa fa-calendar"></i>  <strong class="fapadl mhs" ng-repeat="operation in detail.daysofoperation">{{operation.daysofoperationname}}&nbsp;&nbsp;</strong>
                             <br>
                             <br>
 
@@ -100,7 +100,7 @@
                     <div class="more-text">
                         <h2 class="title text-center">Modes Of Payment</h2>
                         <div class="fapd fap">
-                            <i class="fa fa-money"></i><span class="fapadl" ng-repeat="payment in detail.modeofpayment">{{payment.modeofpaymentname}}</span>
+                            <i class="fa fa-money"></i><span class="fapadl mhs"  ng-repeat="payment in detail.modeofpayment" >{{payment.modeofpaymentname}}</span>
                         </div>
                     </div>
                     <div class="more-text">
