--- a/views/subcategory.html
+++ b/views/subcategory.html
@@ -2,8 +2,8 @@
    
    
 				<div class="banner">
-                   <img src="lib/images/ad/ad.jpg" ng-show="banner.banner==''" width="100%">
-                   <img src="lib/images/ad/{{banner.banner}}" ng-show="banner.banner!=''" width="100%">
+                   <img src="{{'ad/'+ad.jpg | imagepath1}}" ng-show="banner.banner==''" width="100%">
+                   <img src="{{'png/'+banner.banner | imagepath1}}" ng-show="banner.banner!=''" width="100%">
                 </div>
    
     <div class="row" style="height:10px;">
