--- a/views/category.html
+++ b/views/category.html
@@ -1,7 +1,7 @@
 <section>
 		<div class="container">
 		<div class="banner">
-                   <img src="{{'ad/'+ad.jpg | imagepath1}}" ng-show="banner.banner==''" width="100%">
+                   <img src="{{'ad/'+ad.jpg}}" ng-show="banner.banner==''" width="100%">
                    <img src="{{'png/'+banner.banner | imagepath1}}" ng-show="banner.banner!=''" width="100%">
                 </div>
 			<div class="row">
