--- a/views/subcategory.html
+++ b/views/subcategory.html
@@ -2,7 +2,7 @@
    
    
 				<div class="banner">
-                   <img src="{{'ad/'+ad.jpg | imagepath1}}" ng-show="banner.banner==''" width="100%">
+                   <img src="{{'ad/'+ad.jpg}}" ng-show="banner.banner==''" width="100%">
                    <img src="{{'png/'+banner.banner | imagepath1}}" ng-show="banner.banner!=''" width="100%">
                 </div>
    
