--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -2272,3 +2272,11 @@ border-right:1px solid;
    
 padding: 0px 7px 0px 11px;
 }
+.sub-cat {
+    font-size: 22px;
+    background: rgb(228, 241, 255);
+    padding: 22px 34px;
+}
+.sub-cat i.fa.fa-chevron-right {
+    color: #049fb3;
+}
