--- a/views/subcategory.html
+++ b/views/subcategory.html
@@ -1,16 +1,34 @@
 <div class="container">
    
+   <div class="row">
    
+   <div class="col-md-12">
 				<div class="banner">
                    <img ng-src="{{'ad/ad.jpg' | imagepath1}}" ng-show="banner1.banner==''" width="100%">
                    <img ng-src="{{'png/'+banner1.banner | imagepath1}}" ng-show="banner1.banner!=''" width="100%">
                 </div>
-   
+                </div>
+   </div>
     <div class="row" style="height:10px;">
     </div>
-    <div class="">
+    <div class="row">
+    
+    <div class="col-md-5">
+    
+    <div class="sub-cat">
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+    
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+    </div>
+    
+<!--
     <div class="sub-hover" ng-repeat="cat in subcat ">
-        <div class=" subcat">
+        <div class=" subcat">-->
+<!--
         <a ng-click="waytoin(cat.id)" >
            
                 <div class="pull-right subfa">
@@ -20,7 +38,25 @@
         </a>
         </div>
     </div>
-</div>
+-->
+
+   </div>
+   <div class="col-md-2"></div>
+   <div class="col-md-5">
+           <div class="sub-cat">
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+    
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+    </div>
+    
+       
+   </div>
+   
+   </div>
     <div class="row" style="height:10px;">
     </div>
 </div>
