--- a/views/slider.html
+++ b/views/slider.html
@@ -78,10 +78,14 @@
                     <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="city in cities" value="{{city.id}}">{{city.name}} </option>
                 </select>
                 
+                <i class="fa fa-map-marker fapadr"></i><span class="fapadr">{{area}}</span>
+                
+<!--
                 <select class="city onlycursor" ng-model="form.area">
                    <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" value="0">Select Area</option>
                     <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="area in areas" value="{{area.id}}">{{area.name}} </option>
                 </select>
+-->
                
                 <!-- <span style="color:white;" id="location" class="showdiv tofirstup">Location <i class="fa fa-chevron-down"></i></span>
                 <select class="btn btn-default mrt30 city hidediv" id="locationdrop" ng-model="city">
@@ -92,7 +96,7 @@
                     <option ng-repeat="are in area" value="{{are.name}}">{{are.name}}</option>
                 </select> -->
                 
-                <input type="text" name="abc" placeholder="Search For Anything Anywhere" ng-model="search" ng-change="searchlist(search,form.cityy,form.area)" style="width: 90%;" />
+                <input type="text" name="abc" placeholder="Search For Anything Anywhere" ng-model="search" ng-change="searchlist(search,form.cityy)" style="width: 90%;" />
                 <!-- <input type="hidden" name="searchid" ng-model="categoryid"> -->
                 {{categoryid}}
                 <button type="submit" id="sea" class="btn btn-default search"><i class="fa fa-arrow-circle-o-right" ng-click="innershearch()"></i>
