--- a/views/subcategory.html
+++ b/views/subcategory.html
@@ -11,18 +11,15 @@
    </div>
     <div class="row" style="height:10px;">
     </div>
-    <div class="row">
     
-    <div class="col-md-5">
+    
+    <div class="row" ng-repeat="subc in subcat">
+    
+    <div class="col-md-5" ng-repeat="cat in subc">
     
     <div class="sub-cat">
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-    
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <a ng-click="waytoin(cat.id)"><i class="fa fa-caret-right"></i><span class="subcate-text"> {{cat.name}}</span></a>
+
     </div>
     
 <!--
@@ -42,19 +39,21 @@
 
    </div>
    <div class="col-md-2"></div>
+<!--
    <div class="col-md-5">
            <div class="sub-cat">
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
     
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
-        <i class="fa fa-chevron-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
+        <i class="fa fa-caret-right"></i><span class="subcate-text"> All Restaurent</span><br>
     </div>
     
        
    </div>
+-->
    
    </div>
     <div class="row" style="height:10px;">
