--- a/views/innerheader.html
+++ b/views/innerheader.html
@@ -7,7 +7,7 @@
 						</div>
 						<div class="btn-group pull-right">
 								<form action="#" class="searchform">
-                                <input type="text" name="abc" ng-model="search" ng-change="searchlist(search,form.cityy,form.area)" placeholder="Search..." style="width:500px;"/>
+                                <input type="text" name="abc" ng-model="search" ng-change="searchlist(search)" placeholder="Search..." style="width:500px;"/>
                                 <button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right" ng-click="innershearch()"></i></button>
      
                 <div id="divsearch" class="searchdrop" ng-show="searchshow">
