--- a/views/detail.html
+++ b/views/detail.html
@@ -134,6 +134,11 @@
                             </table>
                         </div>
                     </div>
+                    {{detail.listing.video}}
+                    <video width="320" height="240" controls>
+                      <source src="http://localhost/foranyinformation/uploads/event30414.3gp">
+                    </video>
+                    
                 </div>
             </div>
             <!--
