--- a/views/detail.html
+++ b/views/detail.html
@@ -106,8 +106,7 @@
                     <div class="more-text">
                         <h2 class="title text-center">Enquiry</h2>
                         <div class="signup-form">
-                            <div class="signupmsg" ng-show="enquiryshow">
-
+                            <div class="signupmsg">
                                 {{enquirymsg}}
                             </div>
                             <input type="text" ng-model="enquiry.name" class="form-control" ng-class="allvalidation[0].validation" placeholder="Name *" required/>
